RESOLVED FIXED295252
[WPE] Click count leaking through successive layout test within the same WPEView
https://bugs.webkit.org/show_bug.cgi?id=295252
Summary [WPE] Click count leaking through successive layout test within the same WPEView
Lauro Moura
Reported 2025-06-30 18:36:06 PDT
In the new WPE Platform, `WPEWebView` tracks the click count in its `priv->lastButtonPress` to forward to WebKit when processing incoming button presses. This click count can leak through tests when the same WPEWebView is fed events by EventSenderProxyClientWPE. For example, the tests fast/html/details-remove-summary-X-and-click.html just removes an element from the DOM and makes a single mouseMove+mousePress+mouseUp operation in successive separate test files. For the first test, wpe ended the expectation with the correct "caret:" entry, and for subsequent tests, we could end up with a "selection start:" and "selection end:" pair and an emitted mouse double click. And, if running in isolation, we get the "caret:" instead. Tentative patch incoming.
Attachments
Lauro Moura
Comment 1 2025-06-30 18:39:20 PDT
Fix: WPEView, not WebView
Lauro Moura
Comment 2 2025-06-30 18:52:34 PDT
Carlos Garcia Campos
Comment 3 2025-07-10 02:07:17 PDT
EWS
Comment 4 2025-07-11 04:16:43 PDT
Committed 297259@main (95499dad0adf): <https://commits.webkit.org/297259@main> Reviewed commits have been landed. Closing PR #47813 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.