[WPE] Click count leaking through successive layout test within the same WPEView https://bugs.webkit.org/show_bug.cgi?id=295252

Reviewed by NOBODY (OOPS!).

Add a new function to reset click count tracking between page loads, avoiding
accidental double and triple clicks.

Found this issue while rebaselining the fast/html/details-* tests after
296203@main. Some rebaselines were flaky as the tests were affected by
this when running together.

This helps WPE mirror the GTK4 WebView behavior of resetting the click
count between page loads.

* Source/WebKit/UIProcess/API/wpe/PageClientImpl.cpp:
(WebKit::PageClientImpl::didCommitLoadForMainFrame): Reset click count
between page loads.
* Source/WebKit/WPEPlatform/wpe/WPEView.cpp:
(wpe_view_clear_press_count): Added.
* Source/WebKit/WPEPlatform/wpe/WPEView.h: