Source/WebKit/WPEPlatform/wpe/WPEView.h
@@ -138,6 +138,7 @@ WPE_API guint                   wpe_view_compute_press_count           (WPEView 
                                                                         gdouble             y,
                                                                         guint               button,
                                                                         guint32             time);
+WPE_API void                    wpe_view_clear_press_count             (WPEView            *view);
 WPE_API void                    wpe_view_focus_in                      (WPEView            *view);
 WPE_API void                    wpe_view_focus_out                     (WPEView            *view);
 WPE_API gboolean                wpe_view_get_has_focus                 (WPEView            *view);
