Tools/WebKitTestRunner/libwpe/EventSenderProxyClient.h
@@ -36,7 +36,7 @@ class EventSenderProxyClient {
 public:
     virtual ~EventSenderProxyClient() = default;
 
-    virtual void mouseDown(unsigned, double, WKEventModifiers, double, double, unsigned&) = 0;
+    virtual void mouseDown(unsigned, double, WKEventModifiers, double, double, int /*clickCount*/, unsigned&) = 0;
     virtual void mouseUp(unsigned, double, WKEventModifiers, double, double, unsigned&) = 0;
     virtual void mouseMoveTo(double, double, double, WKEventMouseButton, unsigned) = 0;
     virtual void mouseScrollBy(int, int, double, double, double) = 0;
